@@ -1,6 +1,10 @@
 <?php
 set_time_limit(0);
 
+// Variables Used:
+//  files, error, error_code, auth, album_count, song_count, artist_count, genre_count, album_id, artist_id, genre_id
+// Shared Variables:
+
 // this script uses a lot of custom queries because we don't need all the information the module api would return
 //  we also want it to be pretty fast
 
@@ -12,6 +16,8 @@ $fp = fopen('/tmp/test.txt', 'a');
 fwrite($fp, var_export($_SERVER, true));
 fclose($fp);
 
+$error = '';
+
 // check for the action
 if(isset($_REQUEST['action']))
 {
@@ -19,6 +25,12 @@ if(isset($_REQUEST['action']))
 	{
 		case 'ping':
 		// report the session has expired
+		if($_REQUEST['auth'] != session_id())
+		{
+			$error = 'Session Expired';
+			$error_code = '401';
+		}
+		
 		break;
 		case 'handshake':
 		// send out the ssid information
@@ -57,6 +69,17 @@ if(isset($_REQUEST['action']))
 		));
 		$genre_count = $result[0]['count(*)'];
 		
+		// set the variables in the template
+		$GLOBALS['smarty']->assign('auth', $session_id());
+		
+		$GLOBALS['smarty']->assign('song_count', $song_count);
+		
+		$GLOBALS['smarty']->assign('album_count', $album_count);
+		
+		$GLOBALS['smarty']->assign('artist_count', $artist_count);
+
+		$GLOBALS['smarty']->assign('genre_count', $genre_count);
+		
 		break;
 		case 'artists':
 		// get a simple list of all the artists
@@ -87,6 +110,10 @@ if(isset($_REQUEST['action']))
 		}
 		
 		$files = array_values($files);
+		
+		// set the variables in the template		
+		$GLOBALS['smarty']->assign('files', $files);
+		
 		break;
 		case 'artist_albums':
 		// get a list of albums for a particular artist
@@ -103,6 +130,9 @@ if(isset($_REQUEST['action']))
 			'COLUMNS' => '*,MIN(id) as id,count(*) as SongCount',
 			'WHERE' => 'Artist = "' . addslashes($result[0]['Artist']) . '"'
 		));
+		
+		// set the variables in the template		
+		$GLOBALS['smarty']->assign('files', $files);
 		
 		break;
 		case 'album_songs':
@@ -134,6 +164,13 @@ if(isset($_REQUEST['action']))
 			'SELECT' => 'audio',
 			'WHERE' => 'Album = "' . addslashes($artist_album[0]['Album']) . '" AND Artist = "' . addslashes($artist_album[0]['Artist']) . '"'
 		));
+		
+		// set the variables in the template		
+		$GLOBALS['smarty']->assign('files', $files);
+		
+		$GLOBALS['smarty']->assign('genre_id', $genre_id);
+		
+		$GLOBALS['smarty']->assign('artist_id', $artist_id);
 		
 		break;
 		default:
