@@ -35,7 +35,9 @@ $this->assign('type_icons', $type_icons);
 {elseif $files[file].Filepath|@handles:'diskimage'}<cat>{$prefix}diskimage</cat>
 {else}<cat>{$prefix}file</cat>{/if}
 {foreach from=$columns item=column_value}
+{if $files[file].Title eq "" and $column_value eq "Title"}<info-Title>{$files[file].Filename|utf8_encode|htmlspecialchars}</info-Title>{else}
 		<info-{$column_value}>{if isset($files[file].$column_value)}{$files[file].$column_value|utf8_encode|htmlspecialchars}{/if}</info-{$column_value}>
+{/if}
 {/foreach}
 	</file>
 {/section}
